使用netty来暴露metrics